:sparkles: added ads scraper
