# docs/swagger/swagger.json
@@ -7,6 +7,29 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/ads": {
+            "post": {
+                "description": "SOUQ Ads",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ads"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/api/catalog": {
             "get": {
                 "description": "Get catalog",
